--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favico.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="description" content="Adminstrador de tesinas - UTN FRLR." />
+    <meta name="author" content="Alejandro J. Gómez, Juan I. Sotomayor, Leonel A. Torres" />
+    <meta property="og:title" content="Administrador de tesinas" />
+    <meta property="og:description" content="App web desarrollada sin fines de lucro, diseñada para la gestión de proyectos de tesinas." />
+    <meta property="og:image" content="/assets/og.webp" />
+    <meta property="og:url" content="https://administrador-tesinas.duckdns.org/home" />
+    <meta property="og:type" content="website" />
     <title>Administrador de tesinas</title>
   </head>
   <body>
