Modificación en la OG Image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Alejandro J. Gómez, Juan I. Sotomayor, Leonel A. Torres" />
     <meta property="og:title" content="Administrador de tesinas" />
     <meta property="og:description" content="App web desarrollada sin fines de lucro, diseñada para la gestión de proyectos de tesinas." />
-    <meta property="og:image" content="/assets/og.webp" />
+    <meta property="og:image" content="/assets/preview.jpg" />
     <meta property="og:url" content="https://administrador-tesinas.duckdns.org/home" />
     <meta property="og:type" content="website" />
     <title>Administrador de tesinas</title>
